cluster/homelab/apps/homepage/gateway-api.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homepage-internal
  namespace: homepage
spec:
  parentRefs:
    - name: internal
      namespace: istio-gateway
  hostnames:
    - "homepage.sgenov.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: homepage
          port: 3000
