cluster/homelab/apps/homepage/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: homepage
    namespace: homepage
spec:
    ingressClassName: nginx
    tls:
        - hosts:
              - "*.sgenov.dev"
          secretName: ingress
    rules:
        - host: homepage.sgenov.dev
          http:
              paths:
                  - pathType: Prefix
                    path: "/"
                    backend:
                        service:
                            name: homepage
                            port:
                                number: 3000
